--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,3 +18,9 @@ button {
     margin-top: 20px;
     font-size: 1.5em;
 }
+
+#farewell {
+    margin-top: 20px;
+    font-size: 1.2em;
+    color: green;
+}
